--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,7 @@
 <header>
+  <div class="logo">
+    <a href="{{ site.github.url }}/">Sylvain P.</a>
+  </div>
   <nav>
     {% for item in site.data.settings.menu %}
       <a href="{{ site.github.url }}/{{ item.url }}">{{ item.name }}</a>
